--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --write"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.3.6",
     "@types/redux-saga": "^0.10.5",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "sass": "^1.49.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.0.0",
