--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.3.6",
     "@types/redux-saga": "^0.10.5",
+    "antd": "^4.18.9",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
