--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.3.6",
+    "@trendyol-js/react-carousel": "^2.0.1",
     "@types/redux-saga": "^0.10.5",
     "antd": "^4.18.9",
     "next": "latest",
