feat : add axios and get all products in home page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
       "@Pages/*": ["pages/*"],
       "@Components/*": ["components/*"],
       "@Images/*": ["images/*"],
-      "@Style/*": ["styles/*"]
+      "@Style/*": ["styles/*"],
+      "@Axios/*": ["axios/*"],
+      "@Interface/*": ["interface/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
