--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@trendyol-js/react-carousel": "^2.0.1",
     "@types/redux-saga": "^0.10.5",
     "antd": "^4.18.9",
+    "axios": "^0.26.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
